--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+actix-ws = "0.3.0"
 bcrypt = "0.15.1"
 diesel = { version = "2.2.4", features = ["postgres" , "postgres_backend"] }
 dotenv = "0.15.0"
+futures-util = "0.3.30"
 serde = { version = "1.0.210", features = ["derive"] }
 uuid = { version = "1.10.0", features = ["v4"]}
