--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,6 @@ diesel = { version = "2.2.4", features = ["postgres" , "postgres_backend"] }
 dotenv = "0.15.0"
 futures-util = "0.3.30"
 serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
+tokio = { version = "1.40.0", features = ["macros", "rt", "sync"]}
 uuid = { version = "1.10.0", features = ["v4"]}
